2014-03-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.3 release procedure:
 	Changes since nco-4_4_2: srd DAP, fxm
	cd ~/nco;cvs tag -d nco-4_4_3;cvs tag -d nco-4_4_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.3 release"
	cvs tag -c nco-4_4_3;cvs tag -c nco-4_4_3-1

	* User reported extreme slowdown accessing 3-D data with strides from DAP server
	Info from R. Signell and J. Whitaker suggests using nco_get_vars() instead of nco_get_varm()
	All NCO hyperslab code uses nco_get_varm() instead of nco_get_vars(), and supplies NULL * as mapping vector
	Replacing all instances of nco_get_varm() with nco_get_vars() solves access speed problem on DAP

2014-03-03  Charlie Zender  <zender@uci.edu>

	* Add NCOpy by Joe Hamman to homepage

2014-02-27  Charlie Zender  <zender@uci.edu>

	* Document HDF Group H4CF tool h4tonccf

2014-02-26  Charlie Zender  <zender@uci.edu>

	* Warn about record chunk sizes only after records have been written

2014-02-25  Charlie Zender  <zender@uci.edu>

	* Diagnose/fix ncwa/ncpdq dimension-matching algorithm
	Old algorithm matched any dimension that contained specified string

2014-02-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: ncra.c mmr 4 LLVM/clang, -X, rx nsx, cll_mth, ncwa sng, cnk
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Slightly simplify logic in calling/utilizing nco_inq_format_extended()

	* Restore explanatory messages for new ncrename regression failures

	* Remove test group with hidden attributes from in_grp.cdl to prevent build failures with netCDF 4.1.1-
	Isolate this group in new file hdn.cdl so that in_grp.nc builds	and regressions pass

2014-02-19  Charlie Zender  <zender@uci.edu>

	* Turn-off OpenMP by setting thr_nbr_max_fsh == 1. Revisit when thoroughly tested.

	* Fix bad initialization of dmn_cmn in nco_cnk_sz_set_trv()
