@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.466 2014-03-04 05:19:51 pvicente Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.467 2014-03-05 01:31:49 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -674,7 +674,20 @@ print "\n";
     $tst_cmd[1]="ncbo: ERROR No common variables found";
     $tst_cmd[2]="SS_OK";   
     NCO_bm::tst_run(\@tst_cmd);
-    $#tst_cmd=0; # Reset array 	    
+    $#tst_cmd=0; # Reset array 	 
+	
+# ncbo #24
+#ncbo -O --op_typ=add  mdl.nc mdl2.nc out.nc
+#ncks -C -g cesm_01 -v tas1 out.nc
+# 544.4 = (file 1 tas1) 272.1 + (file 2 tas1) 272.3
+
+    $dsc_sng="(Groups) Process ensembles in both files mdl.nc mdl2.nc";
+    $tst_cmd[0]="ncbo -O --op_typ=add $fl_fmt $nco_D_flg $in_pth_arg mdl.nc mdl2.nc %tmp_fl_00%";
+	$tst_cmd[1]="ncks -C -g cesm_01 -v tas1 %tmp_fl_00%";
+    $tst_cmd[2]="time[3] tas1[3]=544.4";
+    $tst_cmd[3]="SS_OK";   
+    NCO_bm::tst_run(\@tst_cmd);
+    $#tst_cmd=0; # Reset array 	    	   
 
    } # end HAVE_NETCDF4_H
    
